--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/PavanKumar_Nakka_Resume.pdf')"
           >
-            Download CV
+            View CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
