--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://app.powerbi.com/links/xZMzRIK5sz?ctid=a698667d-8817-4ad9-a7f2-bb287f867e5f&pbi_source=linkShare'"
               >
                 Live Demo
               </button>
