--- a/index.html
+++ b/index.html
@@ -80,14 +80,25 @@
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="about-details-container">
-          <div class="text-container">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+          <div class="text-container ">
+            <p class="about-description">
+              Hello! 👋🏻 I'm Ganesha Srikari Veerendra Pavankumar Nakka, also known as "Pavan".
+              Currently, I'm pursuing my Master of Business Analytics and Information Management at the University of Delaware, with an expected completion date of December 2024.</br></br>
+
+              My journey into the world of data analytics and project management has been dynamic and enriching. Initially embarking on my career as a Software Engineer - QA at Technovert Solutions Pvt Ltd., 
+              I immersed myself in the intricacies of the Software Development Life Cycle (SDLC). Here, I led initiatives in test automation, successfully executing Proof of Concepts (POCs) and implementing innovative solutions 
+              to enhance efficiency and quality assurance processes. Delving into the heart of software development, I collaborated closely with cross-functional teams to ensure seamless integration and deployment of products.</br></br>
+
+              Transitioning to Accenture Solutions Pvt Ltd., I embraced the role of an Application Development Team Lead with zeal. Leading a team of talented individuals, I orchestrated end-to-end testing processes with precision and finesse. 
+              Through meticulous planning and execution, I ensured that project milestones were met with excellence, consistently delivering results that exceeded client expectations. My responsibilities extended to translating intricate business 
+              requirements into actionable user stories, fostering a collaborative environment where creativity and innovation thrived.</br></br>
+
+              In addition to my corporate endeavors, I currently serve as a Graduate Teaching Assistant at the University of Delaware. Collaborating closely 
+              with Professor Guido Geerts, I play a pivotal role in shaping the next generation of data analytics professionals. Through interactive sessions and hands-on guidance, I impart invaluable knowledge 
+              and practical skills to aspiring students, preparing them to navigate the complex landscape of business analytics with confidence.</br></br>
+
+              My journey is underpinned by a relentless pursuit of excellence, a thirst for knowledge, and an unwavering commitment to delivering tangible results. 
+              As I embark on the next phase of my career, I am excited to leverage my diverse skill set and experiences to make a meaningful impact in the field of business analytics and information management.</br></br>
             </p>
           </div>
           </div>
@@ -114,7 +125,7 @@
               />
               <h2>MS in Business Analytics and Information Management</h2>
               <h4>University of Delaware,</h4> <h5>Newark, DE</h5>
-              <p>Feb 2023 - Present</p>
+              <p class="edu-timeline">Feb 2023 - Present</p>
             </div>
             <div class="education-details-container2">
               <img
@@ -124,7 +135,7 @@
               />
               <h2>B.Tech in Mechanical Engineering</h2>
               <h4>Aditya Engineering College,</h4> <h5>Surampalem, AP, India</h5>
-              <p>Aug 2012 - Apr 2016</p>
+              <p class="edu-timeline">Aug 2012 - Apr 2016</p>
             </div>
           </div>
         </div>
@@ -710,7 +721,7 @@
           <div class="project-details-container2 color-container">
             <div class="project-article-container">
               <img
-                src="./assets/forage.jpg"
+                src="./assets/foragepwc.jpg.webp"
                 alt="Project 3"
                 class="project-img"
               />
