--- a/index.html
+++ b/index.html
@@ -737,13 +737,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/pavanngsv/CustomerVerification-PossibleFinance'"
+                onclick="location.href='https://github.com/pavanngsv/FraudDetection---Possible-Finance'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://buad625capstone.shinyapps.io/Capstone/'"
+                onclick="location.href='https://buad625capstone.shinyapps.io/Milestone7/'"
               >
                 Live Demo
               </button>
