--- a/index.html
+++ b/index.html
@@ -732,12 +732,18 @@
               My initial assignment involved analyzing call center data for PHONENOW, a major telecommunications company seeking transparency and insights into their operations.
               The objective was to understand customer and agent behavior. To facilitate communication with management, 
               the call center manager required a dashboard presenting key performance indicators (KPIs) pertinent to their operations.</p>
-            <div class="btn-container">
+              <div class="btn-container">
+                <button
+                  class="btn btn-color-2 project-btn"
+                  onclick="location.href='https://app.powerbi.com/view?r=eyJrIjoiOTUyYmRmYzAtZDNkOS00NGIwLTlhMzItYzQxMjhmNDAxYTM1IiwidCI6ImE2OTg2NjdkLTg4MTctNGFkOS1hN2YyLWJiMjg3Zjg2N2U1ZiIsImMiOjF9'"
+                >
+                  Call Center Data Trends
+                </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://app.powerbi.com/links/xZMzRIK5sz?ctid=a698667d-8817-4ad9-a7f2-bb287f867e5f&pbi_source=linkShare'"
+                onclick="location.href='https://app.powerbi.com/view?r=eyJrIjoiNDU5ODg3ZjYtZTRlYi00MmE2LTk0ZTUtOWE2MzY0ZDZhZTNjIiwidCI6ImE2OTg2NjdkLTg4MTctNGFkOS1hN2YyLWJiMjg3Zjg2N2U1ZiIsImMiOjF9&pageName=ReportSection'"
               >
-                Live Demo
+                Churn Analysis
               </button>
             </div>
           </div>
@@ -751,12 +757,6 @@
             </div>
             <h2 class="experience-sub-title project-title">USA Unemployment and Education Level Data Analysis</h2>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
