--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
               <h2>MS in Business Analytics and Information Management</h2>
               <h4>University of Delaware,</h4> <h5>Newark, DE</h5>
               <p class="edu-timeline">Feb 2023 - Present</p>
+              <p style="text-align: left; font-weight: bold;">Course Work:</p>
+                <ul class="course-work">
+                <li><span class = "course"> Database Design and Implementation</span> | <span class = "tech"> Entity Relationships, Enterprise Resource Modelling, SQL </span></li>
+                <li><span class = "course"> Object Oriented System Analysis and Design</span> | <span class = "tech"> Project Management, Agile Methodologies</span></li>
+                <li><span class = "course"> Fundamentals of Analytics</span> | <span class = "tech"> Decision Trees, Hypothesis Testing, Regression Testing</span></li>
+                <li><span class = "course"> Decision Analytics and Visualization</span> | <span class = "tech"> R</span></li>
+                <li><span class = "course"> Applied Database Management</span> | <span class = "tech"> SAS</span></li>
+                <li><span class = "course"> Unstructured Data Analytics</span> | <span class = "tech"> Deep Learning, Web mining</span></li>
+                <li><span class = "course"> Cybersecurity Management</span> | <span class = "tech"> Data Security with Lab simulations</span></li>
+                <li><span class = "course"> Capstone</span> | <span class = "tech"> R, AWS Rekognition</span></li>
+                <li><span class = "course"> Dashboard Design and Storytelling</span> | <span class = "tech"> Alteryx, QlikSense, Data Analysis</span></li>
+                </ul>
             </div>
             <div class="education-details-container2">
               <img
@@ -679,7 +691,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Customer Verification for Possible Finance</h2>
+            <h2 class="experience-sub-title project-title">Fraud Analysis for Possible Finance</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
