--- a/index.html
+++ b/index.html
@@ -482,6 +482,17 @@
                   class="skill-icon"
                 />
                 <div>
+                  <h3 class="skill">GIT</h3>
+                  <p class="skill-level">Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
                   <h3 class="skill">JIRA</h3>
                   <p class="skill-level">Intermediate</p>
                 </div>
