--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
                 />
                 <div>
                   <h3 class="skill">Python</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -116,7 +115,6 @@
                 />
                 <div>
                   <h3 class="skill">R</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -127,7 +125,6 @@
                 />
                 <div>
                   <h3 class="skill">SAS</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -138,7 +135,6 @@
                 />
                 <div>
                   <h3 class="skill">SQL</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -149,7 +145,6 @@
                 />
                 <div>
                   <h3 class="skill">HTML</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -160,7 +155,6 @@
                 />
                 <div>
                   <h3 class="skill">CSS</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -171,7 +165,6 @@
                 />
                 <div>
                   <h3 class="skill">PowerBI DAX</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -182,7 +175,6 @@
                 />
                 <div>
                   <h3 class="skill">NumPy</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -193,7 +185,6 @@
                 />
                 <div>
                   <h3 class="skill">Pandas</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -204,7 +195,26 @@
                 />
                 <div>
                   <h3 class="skill">GGPlot2</h3>
-                  <p class="skill-level">Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
+                  <h3 class="skill">Matplotlib</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
+                  <h3 class="skill">Seaborn</h3>
                 </div>
               </article>
             </div>
@@ -220,7 +230,6 @@
                 />
                 <div>
                   <h3 class="skill">SDLC</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -231,7 +240,6 @@
                 />
                 <div>
                   <h3 class="skill">Agile Methodologies</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -242,7 +250,6 @@
                 />
                 <div>
                   <h3 class="skill">Work Breakdown Structure (WBS)</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -253,7 +260,6 @@
                 />
                 <div>
                   <h3 class="skill">Sprint Planning</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -264,7 +270,6 @@
                 />
                 <div>
                   <h3 class="skill">User Stories</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -275,7 +280,6 @@
                 />
                 <div>
                   <h3 class="skill">Capacity Planning</h3>
-                  <p class="skill-level">Basic</p>
                 </div>
               </article>
             </div>
@@ -291,7 +295,6 @@
                 />
                 <div>
                   <h3 class="skill">STLC</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -302,7 +305,6 @@
                 />
                 <div>
                   <h3 class="skill">Defect Life Cycle</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -313,7 +315,6 @@
                 />
                 <div>
                   <h3 class="skill">Test Planning</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -324,7 +325,6 @@
                 />
                 <div>
                   <h3 class="skill">RTM</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -335,7 +335,6 @@
                 />
                 <div>
                   <h3 class="skill">Test Cases</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -346,7 +345,6 @@
                 />
                 <div>
                   <h3 class="skill">Manual Testing</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -357,7 +355,6 @@
                 />
                 <div>
                   <h3 class="skill">Test Automation</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -368,7 +365,6 @@
                 />
                 <div>
                   <h3 class="skill">Smoke Testing</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -379,7 +375,6 @@
                 />
                 <div>
                   <h3 class="skill">Sanity Testing</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -390,7 +385,6 @@
                 />
                 <div>
                   <h3 class="skill">User Acceptance Testing</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
             </div>
@@ -406,7 +400,6 @@
                 />
                 <div>
                   <h3 class="skill">Microsoft PowerBI</h3>
-                  <p class="skill-level">Advanced</p>
                 </div>
               </article>
               <article>
@@ -417,7 +410,6 @@
                 />
                 <div>
                   <h3 class="skill">Alteryx Designer</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -428,7 +420,6 @@
                 />
                 <div>
                   <h3 class="skill">Qlik Sense</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -439,7 +430,6 @@
                 />
                 <div>
                   <h3 class="skill">Microsoft Excel</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -450,7 +440,6 @@
                 />
                 <div>
                   <h3 class="skill">Microsoft Word</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -461,7 +450,6 @@
                 />
                 <div>
                   <h3 class="skill">Microsoft Access</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -472,7 +460,6 @@
                 />
                 <div>
                   <h3 class="skill">RStuido</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -483,7 +470,6 @@
                 />
                 <div>
                   <h3 class="skill">GIT</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -494,7 +480,6 @@
                 />
                 <div>
                   <h3 class="skill">JIRA</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -505,7 +490,6 @@
                 />
                 <div>
                   <h3 class="skill">Microsoft Azure DevOps</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -516,7 +500,6 @@
                 />
                 <div>
                   <h3 class="skill">TestRail</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -527,7 +510,6 @@
                 />
                 <div>
                   <h3 class="skill">VS Code</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -538,7 +520,6 @@
                 />
                 <div>
                   <h3 class="skill">Google Colab</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -549,7 +530,6 @@
                 />
                 <div>
                   <h3 class="skill">Jupyter Notebooks</h3>
-                  <p class="skill-level">Basic</p>
                 </div>
               </article>
               <article>
@@ -560,7 +540,6 @@
                 />
                 <div>
                   <h3 class="skill">Selenium WebDriver</h3>
-                  <p class="skill-level">Basic</p>
                 </div>
               </article>
               <article>
@@ -571,7 +550,6 @@
                 />
                 <div>
                   <h3 class="skill">BrowserStack</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -582,7 +560,6 @@
                 />
                 <div>
                   <h3 class="skill">PostMan</h3>
-                  <p class="skill-level">Basic</p>
                 </div>
               </article>
               <article>
@@ -593,7 +570,6 @@
                 />
                 <div>
                   <h3 class="skill">Confluence</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
               <article>
@@ -604,7 +580,6 @@
                 />
                 <div>
                   <h3 class="skill">Google Suite</h3>
-                  <p class="skill-level">Intermediate</p>
                 </div>
               </article>
             </div>
