Updated skillset and responsive design

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="skillset-details-container">
         <div class="skillset-containers">
           <div class="skillset-details-container2">
-            <h2 class="skillset-sub-title">Programming</h2>
+            <h2 class="skillset-sub-title">Programming Languages & Libraries</h2>
             <div class="article-container">
               <article>
                 <img
@@ -194,16 +194,6 @@
                   class="skill-icon"
                 />
                 <div>
-                  <h3 class="skill">GGPlot2</h3>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/next.png"
-                  alt="Experience icon"
-                  class="skill-icon"
-                />
-                <div>
                   <h3 class="skill">Matplotlib</h3>
                 </div>
               </article>
@@ -217,10 +207,50 @@
                   <h3 class="skill">Seaborn</h3>
                 </div>
               </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
+                  <h3 class="skill">GGPlot2</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
+                  <h3 class="skill">Shinyr</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
+                  <h3 class="skill">Dplyr</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
+                  <h3 class="skill">Lubridate</h3>
+                </div>
+              </article>
             </div>
           </div>
           <div class="skillset-details-container2">
-            <h2 class="skillset-sub-title">Methodologies</h2>
+            <h2 class="skillset-sub-title">Methodologies & Software Testing</h2>
             <div class="article-container">
               <article>
                 <img
@@ -259,6 +289,16 @@
                   class="skill-icon"
                 />
                 <div>
+                  <h3 class="skill">Capacity Planning</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
                   <h3 class="skill">Sprint Planning</h3>
                 </div>
               </article>
@@ -272,21 +312,6 @@
                   <h3 class="skill">User Stories</h3>
                 </div>
               </article>
-              <article>
-                <img
-                  src="./assets/next.png"
-                  alt="Experience icon"
-                  class="skill-icon"
-                />
-                <div>
-                  <h3 class="skill">Capacity Planning</h3>
-                </div>
-              </article>
-            </div>
-          </div>
-          <div class="skillset-details-container2">
-            <h2 class="skillset-sub-title">Testing</h2>
-            <div class="article-container">
               <article>
                 <img
                   src="./assets/next.png"
@@ -489,16 +514,6 @@
                   class="skill-icon"
                 />
                 <div>
-                  <h3 class="skill">Microsoft Azure DevOps</h3>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/next.png"
-                  alt="Experience icon"
-                  class="skill-icon"
-                />
-                <div>
                   <h3 class="skill">TestRail</h3>
                 </div>
               </article>
@@ -529,6 +544,16 @@
                   class="skill-icon"
                 />
                 <div>
+                  <h3 class="skill">Google Suite</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
                   <h3 class="skill">Jupyter Notebooks</h3>
                 </div>
               </article>
@@ -540,6 +565,16 @@
                 />
                 <div>
                   <h3 class="skill">Selenium WebDriver</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/next.png"
+                  alt="Experience icon"
+                  class="skill-icon"
+                />
+                <div>
+                  <h3 class="skill">Microsoft Azure DevOps</h3>
                 </div>
               </article>
               <article>
@@ -570,16 +605,6 @@
                 />
                 <div>
                   <h3 class="skill">Confluence</h3>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/next.png"
-                  alt="Experience icon"
-                  class="skill-icon"
-                />
-                <div>
-                  <h3 class="skill">Google Suite</h3>
                 </div>
               </article>
             </div>
@@ -798,9 +823,9 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/pavanngsv/US_Unemployment-Education_DataAnalysis'"
               >
-                Live Demo
+                Github
               </button>
             </div>
           </div>
