typo and responsive design changes

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                   class="skill-icon"
                 />
                 <div>
-                  <h3 class="skill">RStuido</h3>
+                  <h3 class="skill">RStudio</h3>
                 </div>
               </article>
               <article>
