Update the intro message

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p class="about-description">
               I am a dedicated data enthusiast with a strong passion for transforming data into actionable insights that drive strategic decisions. Pursuing a Master of Business Analytics and Information Management at the University of Delaware, I have honed my skills in data analysis, statistical modeling, and machine learning.<br><br>
               My professional background includes roles in software testing, and application development, where I led projects to enhance efficiency and quality. These experiences have equipped me with the ability to manage complex datasets and implement innovative data-driven solutions.<br><br>
-              I am actively seeking Fall'24 Co-Op / Full-time opportunities in data analytics to leverage my skills and passion for data to solve real-world problems. If you are looking for a committed data professional to enhance your team, let's connect and explore potential collaborations.
+              I am actively seeking <strong>Fall'24 Co-Op / Full-time opportunities in data analytics</strong> to leverage my skills and passion for data to solve real-world problems. If you are looking for a committed data professional to enhance your team, let's connect and explore potential collaborations.
         </p>
       </div>
       <img
