updated profile image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="icon" type="image/png" href="assets/img/technologist_emoji.png" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   </head>
   <body>
@@ -51,7 +52,7 @@
     <section id="profile">
       <div class = "about">
         <div class="section__text">
-          <img src="./assets/image.png" alt="PavanKumar Nakka profile picture" style="height: 300px; width: 300px; margin-bottom: 20px;">
+          <img src="./assets/my_image.png" alt="PavanKumar Nakka profile picture" style="height: 300px; width: 300px; margin-bottom: 20px;">
           <div>
           <p>Hello, I'm</p>
           <h1 class="title">PavanKumar Nakka</h1>
