--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
           <div class="project-details-container2 color-container">
             <div class="project-article-container">
               <img
-                src="./assets/possible.jpg"
+                src="./assets/fraudanalysis-2.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -594,7 +594,7 @@
           <div class="project-details-container2 color-container">
             <div class="project-article-container">
               <img
-                src="./assets/midas-storejpg copy.jpg"
+                src="./assets/midas.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -617,7 +617,7 @@
           <div class="project-details-container2 color-container">
             <div class="project-article-container">
               <img
-                src="./assets/callcetner.webp"
+                src="./assets/callcenter.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -645,12 +645,30 @@
           <div class="project-details-container2 color-container">
             <div class="project-article-container">
               <img
-                src="./assets/unemployment.jpg"
+                src="./assets/Unemployment.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
             <h2 class="experience-sub-title project-title">USA Unemployment and Education Level Data Analysis</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/pavanngsv/US_Unemployment-Education_DataAnalysis'"
+              >
+                Github
+              </button>
+            </div>
+          </div>
+          <div class="project-details-container2 color-container">
+            <div class="project-article-container">
+              <img
+                src="./assets/social_media.png"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Social Media - ER Modeling, Relational Database</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
