added new project images

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
           <div class="project-details-container2 color-container">
             <div class="project-article-container">
               <img
-                src="./assets/fraudanalysis-2.png"
+                src="./assets/possiblfin.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -594,7 +594,7 @@
           <div class="project-details-container2 color-container">
             <div class="project-article-container">
               <img
-                src="./assets/midas.png"
+                src="./assets/midasauto.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -617,7 +617,7 @@
           <div class="project-details-container2 color-container">
             <div class="project-article-container">
               <img
-                src="./assets/callcenter.png"
+                src="./assets/churn analysis.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -663,7 +663,7 @@
           <div class="project-details-container2 color-container">
             <div class="project-article-container">
               <img
-                src="./assets/social_media.png"
+                src="./assets/er.png"
                 alt="Project 3"
                 class="project-img"
               />
